--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- src="http://127.0.0.1:5500/dist/fa/welcome/__feature_hub_feature_app_module_container__.js" -->
     <feature-app
       id="welcome:welcome-feature-app"
-      src="http://127.0.0.1:5500/dist/fa/elcome/main.js"
+      src="CDN_ENDPOINT_URL/fa/elcome/main.js"
       css='[{"href":"https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"}]'
       config="{}"
       loading="lazy"
@@ -21,7 +21,7 @@
     <!-- ohter App -->
     <script
       type="module"
-      src="http://127.0.0.1:5501/dist/mtn-feature-hub-integrator-csr.js"
+      src="CDN_ENDPOINT_URL/dist/mtn-feature-hub-integrator-csr.js"
       defer
     ></script>
   </body>
