pull to new azure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- ohter App -->
     <script
       type="module"
-      src="frontendpoint.azureedge.net/$web/mtn-feature-hub-integrator-csr.js"
+      src="https://frontendpoint.azureedge.net//$web/mtn-feature-hub-integrator-csr.js"
       defer
     ></script>
   </body>
